# RemotePlayWhatever

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: macos_build.yml  macos_buildtest.yml
RemotePlayWhatever/: CMakeLists.txt  ClickablePanel.cpp  ClickablePanel.h  ClientContext.cpp  ClientContext.h  ClientTasks.cpp  ClientTasks.h  FriendPanel.cpp  FriendPanel.h  FriendsListFrame.cpp  FriendsListFrame.h  IClientRemoteClientManager.h  QueueInviter.cpp  QueueInviter.h  RemoteApp.cpp  RemoteApp.h  RemoteInviteHandler.cpp  RemoteInviteHandler.h  RemotePlayInviteHandler.cpp  RemotePlayInviteHandler.h  RemotePlayWhatever.cpp  RemotePlayWhatever.h  SteamStuff.cpp  SteamStuff.h  appicon.xpm  appresource.rc  wxSteamStuff.cpp  wxSteamStuff.h
